--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 body {
  margin: 0;
  padding: 0;
+ font-family: sans-serif;
 }
 u {
  text-decoration: inherit;
@@ -160,15 +161,19 @@ a[href] {
 <div id="instruction">
 <p>「マンカラ」は2人で遊ぶボードゲームです。交互に駒を進め、先に自分の陣地を空にしたプレイヤーが勝者となります。<a href="https://www.youtube.com/watch?v=OL3m2ZbKb1o">QuizKnockのプレイ動画</a>にわかりやすいルール説明があります。</p>
 <p><a href="https://www.youtube.com/watch?v=QYlCPntI8Bw">サブチャンネル動画</a>でも言及がある通り、「マンカラ」は二人零和有限確定完全情報ゲームであり、理論上は完全な先読みが可能です。今回、後退解析 (retrograde analysis) により初期局面から到達可能なすべての局面を解析した結果、初期局面は24手の先手必勝形であることがわかりました。また先手が勝つためには「左→中央」と2連続で動かす手順（前掲のプレイ動画内で「QuizKnockの定石」と呼ばれた手順）が必須であることもわかりました。</p>
-<p>前掲の盤面はこの解析結果を実際のゲームの形で表現したものです。各着手に表示される「WIN/LOSE」がその手を選んだ際の試合結果、括弧内の数字が決着までに要する残り手数を表します。</p><br />
-<h2>制限</h2>
-<p>「マンカラ」には多くのローカルルールがあります。今回の解析結果は「陣地は3つ、各陣地内の初期駒数は3個」というルールに限定したものであり、他のルールに対してはまた別の解析が必要となります。</p>
+<p>前掲の盤面はこの解析結果を実際のゲームの形で表現したものです。各着手に表示される「<span style="font-family: Verdana">WIN/LOSE</span>」がその手を選んだ際の試合結果、括弧内の数字が決着までに要する残り手数を表します。</p><br />
+<h2>発展課題</h2>
+<p>「マンカラ」には多くのローカルルールがあり、今回の解析結果は「陣地は3つ、各陣地内の初期駒数は3個」のQuizKnockルールにのみ有効です。陣地や駒の個数が異なる場合は別の解析を必要とします。</p>
 <h2>技術情報</h2>
 <ul>
 <li>各局面を7つの数字の組で表現した。1-6番目の数字は各陣地内の駒数（先手左端から反時計回り）、7番目の数字は手番（先手 <code>0</code> 後手 <code>1</code>）を表す。初期局面は <code>[3,3,3,3,3,3,0]</code>、先手が初手で中央を選んだ後の局面は <code>[3,0,4,4,3,3,1]</code> と表される。
 <li>初期局面から勝敗が決するまでの間に到達しうる全局面を列挙する処理をPythonで記述した。処理時間は Dual-Core Intel Core i5 1.6GHz, Python3.7.6で約75秒。全12,075個の局面が得られた。
 <li>全局面について理論値（先手勝ち or 後手勝ち）と残り手数を求める処理をPythonで記述した。処理時間は上記と同一環境で約2秒。
 <li>7つの数字の組を7文字の文字列に置換することで全解析結果のデータは約 150KB に収まった。本ページはこのデータをjavascriptで読み込み動作する。
+</ul>
+<h2>参考文献</h2>
+<ul>
+<li><a href="https://www.tanaka.ecc.u-tokyo.ac.jp/ktanaka/dobutsushogi/animal-private.pdf">「どうぶつしょうぎ」の完全解析</a>, 田中 哲朗, 情報処理学会研究報告. GI, [ゲーム情報学] 22, C1-C8, 2009-06-26
 </ul>
 </div>
 <script src="db.js"></script>
