--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@ body {
  margin: 0;
  padding: 0;
  font-family: sans-serif;
+ font-size: 10.5pt;
+ text-align: justify;
+}
+h1 {
+ font-size: 18pt;
 }
 u {
  text-decoration: inherit;
@@ -16,6 +21,9 @@ u {
 }
 a[href] {
  color: inherit;
+}
+ul {
+ padding-left: 20px;
 }
 #game {
  max-width: 960px;
@@ -97,10 +105,13 @@ a[href] {
  opacity: .4;
  cursor: inherit;
 }
-#instruction {
+#article {
  margin: 0 auto;
  padding: 0 10px;
  max-width: 960px;
+}
+.small {
+ font-size: 85%;
 }
 
 @media(prefers-color-scheme: dark){
@@ -128,13 +139,13 @@ a[href] {
   <li style="order:4; visibility: hidden">
  </ul>
  <ul id="fields">
-  <li style="order:12" class="first disabled" onclick="sow(0,0)">3
-  <li style="order:13" class="first disabled" onclick="sow(0,1)">3
-  <li style="order:14" class="first disabled" onclick="sow(0,2)">3
+  <li style="order:12" class="first disabled" onclick="sow(0)">3
+  <li style="order:13" class="first disabled" onclick="sow(1)">3
+  <li style="order:14" class="first disabled" onclick="sow(2)">3
   <li style="order:10" class="store disabled">
-  <li style="order:4" class="second disabled" onclick="sow(1,0)">3
-  <li style="order:3" class="second disabled" onclick="sow(1,1)">3
-  <li style="order:2" class="second disabled" onclick="sow(1,2)">3
+  <li style="order:4" class="second disabled" onclick="sow(4)">3
+  <li style="order:3" class="second disabled" onclick="sow(5)">3
+  <li style="order:2" class="second disabled" onclick="sow(6)">3
   <li style="order:6" class="store">
   <li style="order:1">
   <li style="order:5">
@@ -158,17 +169,22 @@ a[href] {
   <li id="reset" title="reset" onclick="reset()"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M390 88l-55 78a138 138 0 11-116-20v41l93-93-93-94v49a233 233 0 10171 39z"/></svg>
  </ul>
 </div>
-<div id="instruction">
+<div id="article">
 <p>「マンカラ」は2人で遊ぶボードゲームです。交互に駒を進め、先に自分の陣地を空にしたプレイヤーが勝者となります。<a href="https://www.youtube.com/watch?v=OL3m2ZbKb1o">QuizKnockのプレイ動画</a>にわかりやすいルール説明があります。</p>
-<p><a href="https://www.youtube.com/watch?v=QYlCPntI8Bw">サブチャンネル動画</a>でも言及がある通り、「マンカラ」は二人零和有限確定完全情報ゲームであり、理論上は完全な先読みが可能です。今回、後退解析 (retrograde analysis) により初期局面から到達可能なすべての局面を解析した結果、初期局面は24手の先手必勝形であることがわかりました。また先手が勝つためには「左→中央」と2連続で動かす手順（前掲のプレイ動画内で「QuizKnockの定石」と呼ばれた手順）が必須であることもわかりました。</p>
-<p>前掲の盤面はこの解析結果を実際のゲームの形で表現したものです。各着手に表示される「<span style="font-family: Verdana">WIN/LOSE</span>」がその手を選んだ際の試合結果、括弧内の数字が決着までに要する残り手数を表します。</p><br />
+<p><a href="https://www.youtube.com/watch?v=QYlCPntI8Bw">サブチャンネル動画</a>でも言及がある通り、「マンカラ」は二人零和有限確定完全情報ゲームであり、理論上は完全な先読みが可能です。今回、後退解析 (retrograde analysis) により初期局面から到達可能なすべての局面を解析した結果、初期局面は24手で先手必勝であることがわかりました。また先手が勝つためには「左→中央」と2連続で動かす手順（前掲のプレイ動画内で「QuizKnockの定石」と呼ばれた手順）が必須であることもわかりました。</p>
+<p>前掲の盤面はこの解析結果を実際のゲームの形で表現したものです。各着手に表示される「<span style="font-family: Verdana">WIN/LOSE</span>」がその手を選んだ際の試合結果、括弧内の数字が決着までに要する残り手数を表します。</p>
+<h2>解析結果の検討</h2>
+<p><strong>初期局面の勝敗</strong>：初期局面は先手「左→中央」以下先手勝ちです。この初手は先手必勝のために必須であり、これ以外の初手を選ぶと後手必勝になります。</p>
+<p><strong>先手必勝手順の網羅</strong>：総局面数は12,075局面ですが、先手が勝つためにこれらすべてを記憶する必要はありません。既に勝負がついた局面、後手番の局面、着手が1通りしかない局面、そして先手が悪手を出さない限り出現しない局面をすべて除くと、初期局面から先手勝利までに現れる局面数は131となります。つまり先手は131通りの局面について正しい応手を記憶すれば勝てます（この131局面を<a target="_blank" href="https://docs.google.com/spreadsheets/d/e/2PACX-1vQgIjrmxUx4X-rVcXFnHKCFpLFmpWxI47m7Gcjq4ZOc9mcfLbyRbcYfQQFnj_Z6CkubV9VIzcl9CD5b/pubhtml">別表</a>にまとめました）。人間がこの131パターンを暗記してプレイすることもおそらく可能です。</p>
+<p><strong>連続手が悪手になる場合</strong>：駒の移動が左右どちらかの枠で終了する場合、手番を交代せずさらに続けて1手動かすことができます。この連続手が可能な場合は必ず使った方がいいのか、それとも逆に連続手が悪手となる場合があるのか計算したところ、「連続手でない手を動かせば勝つが、連続手を選ぶと負ける」局面が389局面（先手番194 後手番195）ありました。<a href="#game" onclick="set_his([[3,3,3,0,3,3,3,0,0],[3,3,0,1,4,4,3,0,1],[4,3,0,1,0,5,4,1,0],[4,0,1,2,1,5,4,1,1],[4,0,1,2,0,6,4,1,0],[0,1,2,3,1,6,4,1,1],[1,2,3,3,1,6,0,2,0],[1,2,0,4,2,7,0,2,1],[1,2,0,4,0,8,1,2,0],[1,0,1,5,0,8,1,2,0],[0,1,1,5,0,8,1,2,1],[1,2,2,6,1,1,2,3,0]])">例1</a>、<a href="#game" onclick="set_his([[3,3,3,0,3,3,3,0,0],[3,0,4,1,4,3,3,0,1],[4,1,4,1,4,3,0,1,0],[4,0,5,1,4,3,0,1,1],[5,0,5,1,4,0,1,2,0]])">例2</a>などがその実例の局面です（クリックすると上の盤面に局面がロードされます）。</p>
+
 <h2>発展課題</h2>
 <p>「マンカラ」には多くのローカルルールがあり、今回の解析結果は「陣地は3つ、各陣地内の初期駒数は3個」のQuizKnockルールにのみ有効です。陣地や駒の個数が異なる場合は別の解析を必要とします。</p>
 <h2>技術情報</h2>
-<ul>
-<li>各局面を7つの数字の組で表現した。1-6番目の数字は各陣地内の駒数（先手左端から反時計回り）、7番目の数字は手番（先手 <code>0</code> 後手 <code>1</code>）を表す。初期局面は <code>[3,3,3,3,3,3,0]</code>、先手が初手で中央を選んだ後の局面は <code>[3,0,4,4,3,3,1]</code> と表される。
-<li>初期局面から勝敗が決するまでの間に到達しうる全局面を列挙する処理をPythonで記述した。処理時間は Dual-Core Intel Core i5 1.6GHz, Python3.7.6で約75秒。全12,075個の局面が得られた。
-<li>全局面について理論値（先手勝ち or 後手勝ち）と残り手数を求める処理をPythonで記述した。処理時間は上記と同一環境で約2秒。
+<ul class="small">
+<li>各局面を7つの数字の組で表現した。1-6番目の数字は各陣地内の駒数（先手左端から反時計回り）、7番目の数字は手番（先手 <code>0</code> 後手 <code>1</code>）を表す。初期局面は <code>[3,3,3,3,3,3,0]</code>、先手が初手で中央を選んだ後の局面は <code>[3,0,4,4,3,3,1]</code> と表される。ただし駒を動かす計算を単純にするため、7つ組表現だけでなく9つ組表現（どちらの陣地でもない両端の枠も含めた表現）も併用した。
+<li>初期局面から勝敗が決するまでの間に到達しうる全局面を列挙する処理をPythonで記述した。メモリ 8GB, Dual-Core Intel Core i5 1.6GHz, Python3.7.6で実行し、約75秒で全12,075局面が得られた。
+<li>全局面について理論値（先手勝ち or 後手勝ち）と残り手数を求める処理をPythonで記述した。上記と同一の環境で実行し、約2秒で全局面の理論値が得られた。全12,075局面のうち439局面はゲーム終了局面であり、進行中の局面はこれを除く11,636局面。このうち先手勝ちが5,924局面、後手勝ちが5,712局面であった。
 <li>7つの数字の組を7文字の文字列に置換することで全解析結果のデータは約 150KB に収まった。本ページはこのデータをjavascriptで読み込み動作する。
 </ul>
 <h2>参考文献</h2>
