--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <meta name="viewport" content="initial-scale=1.0">
-<meta name="robots" content="noindex">
 <title>「マンカラ」の完全解析</title>
 <link href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap" rel="stylesheet">
 <style>
@@ -170,16 +169,17 @@ ul {
  </ul>
 </div>
 <div id="article">
-<p>「マンカラ」は2人で遊ぶボードゲームです。交互に駒を進め、先に自分の陣地を空にしたプレイヤーが勝者となります。<a href="https://www.youtube.com/watch?v=OL3m2ZbKb1o">QuizKnockのプレイ動画</a>にわかりやすいルール説明があります。</p>
+<p>「マンカラ」は2人で遊ぶボードゲームです。交互に駒を進め、先に自分の陣地を空にしたプレイヤーが勝者となります。<a href="https://www.youtube.com/watch?v=OL3m2ZbKb1o">QuizKnockさんのプレイ動画</a>にわかりやすいルール説明があります。</p>
 <p><a href="https://www.youtube.com/watch?v=QYlCPntI8Bw">サブチャンネル動画</a>でも言及がある通り、「マンカラ」は二人零和有限確定完全情報ゲームであり、理論上は完全な先読みが可能です。今回、後退解析 (retrograde analysis) により初期局面から到達可能なすべての局面を解析した結果、初期局面は24手で先手必勝であることがわかりました。また先手が勝つためには初手「左→中央」の連続手が必須であることもわかりました。</p>
 <p>前掲の盤面はこの解析結果を実際のゲームの形で表現したものです。各着手に表示される「<span style="font-family: Verdana">WIN/LOSE</span>」がその手を選んだ際の試合結果、括弧内の数字が決着までに要する残り手数を表します。</p>
 <h2>解析結果の検討</h2>
 <p><strong>初期局面の勝敗</strong>：初期局面は初手「左→中央」の連続手以下先手勝ちで、後手が最善を尽くしても最長24手で先手が勝利します。またこの初手は先手が勝つために必須であり、これ以外の初手を選ぶと後手に逆転手が生じて後手必勝になります。</p>
-<p><strong>先手必勝手順の網羅</strong>：このゲームに出現しうる総局面数は12,075局面あるため、人間がすべての局面を記憶してプレイすることは困難です。しかし先手が必ず勝つために記憶すべき局面数に限れば、実はそれほど多くありません。12,075局面のうちのほとんどは、先手が最善手を出し続ける限り決して出現しないからです。また先手にそもそも選択肢がない局面（可能な着手が1通りしかない局面/後手の手番/すでに勝敗が決した局面）も記憶する必要はありません。これらを考慮すると、先手が記憶すべき局面数はわずか131であることがわかりました（この131局面を<a target="_blank" href="https://docs.google.com/spreadsheets/d/e/2PACX-1vQgIjrmxUx4X-rVcXFnHKCFpLFmpWxI47m7Gcjq4ZOc9mcfLbyRbcYfQQFnj_Z6CkubV9VIzcl9CD5b/pubhtml">別表</a>にまとめました）。先手はこの131局面について最善手を選び続ける限り、後手の手がどう変化しても必ず勝てます。今後さらにこの131パターンに場合分けなどを施すことで、人間が記憶できるサイズの必勝法もおそらく確立できると想像されます。</p>
+<p><strong>先手必勝手順の網羅</strong>：このゲームに出現しうる総局面数は12,075局面あるため、人間がすべての局面を記憶してプレイすることは困難です。しかし先手が必ず勝つために記憶すべき局面数に限れば、実はそれほど多くありません。12,075局面のうちのほとんどは、先手が最善手を出し続ける限り決して出現しないからです。また先手にそもそも選択肢がない局面（可能な着手が1通りしかない局面/後手の手番/すでに勝敗が決した局面）も記憶する必要はありません。これらを考慮すると、先手が記憶すべき局面数はわずか131であることがわかりました（この131局面を<a target="_blank" href="https://docs.google.com/spreadsheets/d/e/2PACX-1vQgIjrmxUx4X-rVcXFnHKCFpLFmpWxI47m7Gcjq4ZOc9mcfLbyRbcYfQQFnj_Z6CkubV9VIzcl9CD5b/pubhtml">別表（Google スプレッドシート）</a>にまとめました）。先手はこの131局面について最善手を選び続ければ、後手の手がどう変化しても必ず勝てます。このゲームにおける必勝法とは、この131局面を記憶し先手番でプレイすることであると換言できます。</p>
 <p><strong>連続手が悪手になる場合</strong>：駒の移動が両者どちらの陣地でもない両端の枠で終了する場合、手番を交代せずさらに続けて1手動かすことができます。この連続手が可能な場合は必ず使った方がいいのか、それとも逆に連続手が悪手となる場合があるのか調べたところ、「連続手でない手を動かせば勝つが、連続手を選ぶと負ける」局面が389局面（先手番194 後手番195）ありました。<a href="#game" onclick="set_his([[3,3,3,0,3,3,3,0,0],[3,3,0,1,4,4,3,0,1],[4,3,0,1,0,5,4,1,0],[4,0,1,2,1,5,4,1,1],[4,0,1,2,0,6,4,1,0],[0,1,2,3,1,6,4,1,1],[1,2,3,3,1,6,0,2,0],[1,2,0,4,2,7,0,2,1],[1,2,0,4,0,8,1,2,0],[1,0,1,5,0,8,1,2,0],[0,1,1,5,0,8,1,2,1],[1,2,2,6,1,1,2,3,0]])">例1</a>、<a href="#game" onclick="set_his([[3,3,3,0,3,3,3,0,0],[3,0,4,1,4,3,3,0,1],[4,1,4,1,4,3,0,1,0],[4,0,5,1,4,3,0,1,1],[5,0,5,1,4,0,1,2,0]])">例2</a>などがその実例の局面です（クリックすると上の盤面に局面がロードされます）。</p>
 <p><strong>1つの陣地に集まる駒数の最大値</strong>：ある1箇所の陣地（左右両端の枠ではなく、敵味方どちらかの陣地）に集まることができる駒数の最大値は11で、<a href="#game" onclick="set_his([[3,3,3,0,3,3,3,0,0],[0,4,4,1,3,3,3,0,0],[0,0,5,2,4,4,3,0,1],[1,1,5,2,4,0,4,1,0],[1,0,6,2,4,0,4,1,1],[2,0,6,2,0,1,5,2,0],[0,1,7,2,0,1,5,2,1],[0,1,7,2,0,0,6,2,0],[0,0,8,2,0,0,6,2,1],[1,1,9,3,1,0,0,3,0],[1,0,10,3,1,0,0,3,1],[1,0,10,3,0,1,0,3,0],[0,1,10,3,0,1,0,3,1],[0,1,10,3,0,0,1,3,0],[0,0,11,3,0,0,1,3,1]])">この形</a>でのみ出現します（クリックすると上の盤面に局面がロードされます）。次の手番で後手が勝ちゲームが終了するため、集められた11個の駒が動かされることはありません。</p>
-<h2>発展課題</h2>
-<p>「マンカラ」には多くのローカルルールがあり、今回の解析結果は「陣地は3つ、各陣地内の初期駒数は3個」のQuizKnockルールにのみ有効です。陣地や駒の個数が異なる場合は別の解析を必要とします。</p>
+<h2>結語</h2>
+<p>今回の解析により初期局面から到達可能なすべての局面の理論値（先手必勝／後手必勝）と最善手が明らかになりましたが、各局面で「なぜその手は最善か」「なぜこの手は悪手か」を人間に了解可能な形で説明するものではありません。人間にとって理解しやすい「良い手」「悪い手」の見分け方や法則性が存在するのかはまだわかりません。</p>
+<p>また「マンカラ」には多くのローカルルールがあり、今回の解析結果は「陣地は3つ、各陣地内の初期駒数は3個」のQuizKnockルールにのみ有効です。陣地や駒の個数が異なる場合は別の解析を必要とします。</p>
 <h2>技術情報</h2>
 <ul class="small">
 <li>各局面を7つの数字の組で表現した。1-6番目の数字は各陣地内の駒数（先手左端から反時計回り）、7番目の数字は手番（先手 <code>0</code> 後手 <code>1</code>）を表す。初期局面は <code>[3,3,3,3,3,3,0]</code>、先手が初手で中央を選んだ後の局面は <code>[3,0,4,4,3,3,1]</code> と表される。ただし駒を動かす計算を単純にするため、7つ組表現だけでなく9つ組表現（どちらの陣地でもない両端の枠も含めた表現）も併用した。
@@ -190,6 +190,11 @@ ul {
 <h2>参考文献</h2>
 <ul>
 <li><a href="https://www.tanaka.ecc.u-tokyo.ac.jp/ktanaka/dobutsushogi/animal-private.pdf">「どうぶつしょうぎ」の完全解析</a>, 田中 哲朗, 情報処理学会研究報告. GI, [ゲーム情報学] 22, C1-C8, 2009-06-26
+</ul>
+<h2 id="appendix">附録</h2>
+<ul>
+<li><a target="_blank" href="https://github.com/metasta/mancala-analysis/">解析用に書いたコード（GitHub）</a>
+<li>前出の「先手必勝のため記憶すべき131局面」をまとめた<a target="_blank" href="https://docs.google.com/spreadsheets/d/e/2PACX-1vQgIjrmxUx4X-rVcXFnHKCFpLFmpWxI47m7Gcjq4ZOc9mcfLbyRbcYfQQFnj_Z6CkubV9VIzcl9CD5b/pubhtml">Google スプレッドシート</a>（再掲）
 </ul>
 </div>
 <script src="db.js"></script>
